@@ -171,6 +171,7 @@ COM_CONFIG_FIELD_VALUE_DISPLAY_OFFLINE_MESSAGE_CUSTOM="Use Custom Message"
 COM_CONFIG_FIELD_VALUE_DISPLAY_OFFLINE_MESSAGE_LANGUAGE="Use Site Language Default Message"
 COM_CONFIG_FIELD_VALUE_ENTIRE_SITE="Entire Site"
 COM_CONFIG_FIELD_VALUE_MAXIMUM="Maximum"
+COM_CONFIG_FIELD_VALUE_NO_EMAIL="No Email"
 COM_CONFIG_FIELD_VALUE_NONE="None"
 COM_CONFIG_FIELD_VALUE_PHP_MAIL="PHP Mail"
 COM_CONFIG_FIELD_VALUE_SENDMAIL="Sendmail"
