@@ -142,6 +142,13 @@ class ContactModelCategory extends JModelList
 			$query->where('c.access IN ('.$groups.')');
 		}
 
+		// Join over the users for the author and modified_by names.
+		$query->select("CASE WHEN a.created_by_alias > ' ' THEN a.created_by_alias ELSE ua.name END AS author");
+		$query->select("ua.email AS author_email");
+
+		$query->join('LEFT', '#__users AS ua ON ua.id = a.created_by');
+		$query->join('LEFT', '#__users AS uam ON uam.id = a.modified_by');
+
 		// Filter by state
 		$state = $this->getState('filter.published');
 		if (is_numeric($state)) {
