@@ -24,7 +24,7 @@ class ContentViewFeatured extends JViewLegacy
 		$app       = JFactory::getApplication();
 		$doc       = JFactory::getDocument();
 		$params    = $app->getParams();
-		$feedEmail = (@$app->getCfg('feed_email')) ? $app->getCfg('feed_email') : 'author';
+		$feedEmail	= $app->getCfg('feed_email', 'author');
 		$siteEmail = $app->getCfg('mailfrom');
 
 		$doc->link	= JRoute::_('index.php?option=com_content&view=featured');
@@ -69,7 +69,14 @@ class ContentViewFeatured extends JViewLegacy
 			}
 
 			$item->author 		= $author;
-			$item->authorEmail	= (($feedEmail == 'site') ? $siteEmail : $row->author_email);
+			if ($feedEmail == 'site')
+			{
+ 				$item->authorEmail = $siteEmail;
+			}
+			elseif($feedEmail === 'author')
+			{
+				$item->authorEmail = $row->author_email;
+			}
 
 			// Add readmore link to description if introtext is shown, show_readmore is true and fulltext exists
 			if (!$params->get('feed_summary', 0) && $params->get('feed_show_readmore', 0) && $row->fulltext)
