@@ -26,6 +26,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+11-Aug-2012 Jean-Marie Simonet
+ #+ [#25295] Email exposed through RSS and Atom feeds. Thanks Elin and Peter
+ # [#28795] mod_articles_category "read more" truncation not functioning properly. Thanks Elin.
+
 10-Aug-2012 Rouven Weßling
  ^ Reduce use of deprecated JDatabase and JRequest methods.
  ^ Merge latest platform (2f2d084af274840e7103fe6ad826926be8b3eb06)
